--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </a>
     <input type="text" class="form-control w-50 mx-3" placeholder="Rechercher dans les forums...">
 
-    <button class="btn btn-primary">Se connecter</button>
+    <button class="btn btn-primary" href="" id="monBouton">Se connecter</button>
 </nav>
 
         <div class="d-flex">
@@ -68,6 +68,7 @@
 <div class="d-flex">
     
 </div>
+   <script src="script.js"></script>
 
 </body>
 </html>
