--- a/index.html
+++ b/index.html
@@ -8,67 +8,87 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-
-
 </head>
 <body>
-      <nav class="navbar navbar-light bg-white shadow-sm px-3 d-flex align-items-center">
-    <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
-        <img src="Assets/2i.png" alt="Logo" class="logo me-2">
-        Student-Forum
-    </a>
-    <input type="text" class="form-control w-50 mx-3" placeholder="Rechercher dans les forums...">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-3">
+        <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
+            <img src="Assets/2i.png" alt="Logo" class="logo me-2">
+            Student-Forum
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <input type="text" class="form-control" placeholder="Rechercher dans les forums...">
+                </li>
+                <li class="nav-item">
+                    <button class="btn btn-primary ms-2" id="monBouton">Se connecter</button>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <button class="btn btn-primary" href="" id="monBouton">Se connecter</button>
-</nav>
-
-        <div class="d-flex">
-             <nav class="sidebar bg-light p-3 d-flex flex-column">
-            <nav class="sidebar bg-light p-3 d-flex flex-column">
-    <ul class="nav flex-column">
-        <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" href="#">
-                <i class="bi bi-house-door me-2"></i> Home
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" href="#">
-                <i class="bi bi-chat-left-text me-2"></i> Forums
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" href="#">
-                <i class="bi bi-calendar-event me-2"></i> Meetings
-            </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" href="#">
-                <i class="bi bi-people me-2"></i> Community
-            </a>
-        </li>
-        <br>
-        <br>
-         <br>
-        <br>
-         <br>
-        <br>
-         <li class="nav-item">
-            <a class="nav-link d-flex align-items-center" href="#">
-        <i class="bi bi-question-circle me-2"></i> Help Center
-    </a>
-</li>
-
-    </ul>
-</nav>
+    <div class="d-flex">
+        <nav class="sidebar bg-light p-3 d-flex flex-column" id="sidebar">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="#" data-page="home">
+                        <i class="bi bi-house-door me-2"></i> Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="#" data-page="forums">
+                        <i class="bi bi-chat-left-text me-2"></i> Forums
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="#" data-page="meetings">
+                        <i class="bi bi-calendar-event me-2"></i> Meetings
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="#" data-page="community">
+                        <i class="bi bi-people me-2"></i> Community
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center" href="#" data-page="help">
+                        <i class="bi bi-question-circle me-2"></i> Help Center
+                    </a>
+                </li>
+            </ul>
             <div class="mt-auto">
-                <button class="btn btn-primary w-100">+ New Discussion</button>
+                <button class="btn btn-primary w-100" id="newDiscussionBtn">+ New Discussion</button>
             </div>
         </nav>
-        </div>
-<div class="d-flex">
-    
-</div>
-   <script src="script.js"></script>
 
+        <div class="content flex-grow-1 p-4">
+            <div id="home" class="page active">
+                <h1>Bienvenue sur Student-Forum</h1>
+                <p>Contenu de la page d'accueil...</p>
+            </div>
+            <div id="forums" class="page" style="display: none;">
+                <h1>Forums</h1>
+                <p>Contenu des forums...</p>
+            </div>
+            <div id="meetings" class="page" style="display: none;">
+                <h1>Meetings</h1>
+                <p>Contenu des réunions...</p>
+            </div>
+            <div id="community" class="page" style="display: none;">
+                <h1>Community</h1>
+                <p>Contenu de la communauté...</p>
+            </div>
+            <div id="help" class="page" style="display: none;">
+                <h1>Help Center</h1>
+                <p>Contenu du centre d'aide...</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
