--- a/index.html
+++ b/index.html
@@ -8,67 +8,70 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Asap:ital,wght@0,100..900;1,100..900&family=Bangers&family=Caveat:wght@400..700&family=Merienda:wght@300..900&family=Monomakh&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-3">
-        <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
-            <img src="Assets/2i.png" alt="Logo" class="logo me-2">
-            Student-Forum
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <input type="text" class="form-control" placeholder="Rechercher dans les forums...">
-                </li>
-                <li class="nav-item">
-                    <button class="btn btn-primary ms-2" id="monBouton">Se connecter</button>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
     <div class="d-flex">
-        <nav class="sidebar bg-light p-3 d-flex flex-column" id="sidebar">
-            <ul class="nav flex-column">
+        <nav class="sidebar  sticky-top  vh-100 d-flex flex-column bg-dark navbar-dark px-5 text-white" id="sidebar">
+            <a class="navbar-brand fs-5 mt-4" href="#" style="transform: translate(-10px);">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" viewBox="0 0 512 512"><path fill="#fff" d="M242.9 20.46c6.7 19.75 19.7 41.39 4 50.44-38.6 22.04-81.4 41.5-106.2 90.7C103.3 235.7 91.69 412 29.81 451c48.6 3.8 89.69-16.3 108.89-44.2 7.1 34.3 32.6 67 63 84.7-5.2-29-1.8-59.4 19-92.5 16.5 22.9 31.1 59.3 73.8 75.3-16.4-27.5-13.7-52.8-10.7-84.2 8.8 26.9 38.5 50 72.9 58.9-16.8-18.6-23.9-45.5-21-66 14.6 24.9 43.4 38.4 67.1 39.7-153.3-179.6-48.7-291.6 79.4-194.4-.5-49.7-31.4-66.7-67.2-95.7-.9-15.4-9.6-29.3-17.5-43.36-53.7-9.99-121.5-42.01-154.6-68.78zm81.2 74.88c26.1 10.86 46.2 22.56 56.4 35.46-16.6-3.6-39.8-3.5-70-1.1 15-9.7 16.5-21.7 13.6-34.36z"/></svg>
+            </a>
+             <ul class="nav">
+                
+             </ul>
+            <ul class="nav flex-column justify-content-center mt-5 border-bottom ">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center" href="#" data-page="home">
-                        <i class="bi bi-house-door me-2"></i> Home
+                    <a class="nav-link d-flex align-items-center bg-white text-dark" href="#" data-page="home">
+                        <i class="bi bi-house-door me-2 "></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center" href="#" data-page="forums">
-                        <i class="bi bi-chat-left-text me-2"></i> Forums
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center" href="#" data-page="meetings">
-                        <i class="bi bi-calendar-event me-2"></i> Meetings
+                    <a class="nav-link" href="#" data-page="forums">
+                        <i class="bi bi-chat-left-text me-2 text-white"></i>live
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link d-flex align-items-center" href="#" data-page="community">
-                        <i class="bi bi-people me-2"></i> Community
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center" href="#" data-page="help">
-                        <i class="bi bi-question-circle me-2"></i> Help Center
+                        <i class="bi bi-people me-2 text-white"></i> Community
                     </a>
                 </li>
             </ul>
-            <div class="mt-auto">
-                <button class="btn btn-primary w-100" id="newDiscussionBtn">+ New Discussion</button>
-            </div>
+            <ul class="nav flex-column mt-auto border-top">
+                <li class="nav-item"><a href="" class="nav-link text-white"><i class="bi bi-question-circle me-2"></i>vous</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-white"><i class="bi bi-calendar-event me-2"></i>login</a></li>
+            </ul>
+
         </nav>
 
-        <div class="content flex-grow-1 p-4">
+        <div class="content w-100">
+            <nav class="navbar navbar-expand-lg bg-white">
+                <div class="container">
+                    <a class="navbar-brand" href="#" style="font-family: 'Asap';">student-forum</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#"><button class="btn btn-dark text-white">+ nouvelle discussion</button></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        
+            <div class="mouve ms-5 mx-auto">
             <div id="home" class="page active">
                 <h1>Bienvenue sur Student-Forum</h1>
-                <p>Contenu de la page d'accueil...</p>
+                <div class="card bg-dark" style="width:90%;height:30rem;">
+                    <div class="card-title">voiture</div>
+                    <div class="card-body"></div>
+                </div>
             </div>
+        </div>
             <div id="forums" class="page" style="display: none;">
                 <h1>Forums</h1>
                 <p>Contenu des forums...</p>
@@ -86,6 +89,7 @@
                 <p>Contenu du centre d'aide...</p>
             </div>
         </div>
+    </div>
     </div>
 
     <script src="script.js"></script>
