--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         <div class="content w-100">
             <nav class="navbar navbar-expand-lg bg-white">
                 <div class="container">
-                    <a class="navbar-brand" href="#" style="font-family: 'Asap';">student-forum</a>
+                    <a class="navbar-brand fs-2 ms-3 text-dark" href="#" style="font-family: 'Asap';">student-forum</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-
+                    <div class="input position-relative" style="left:10rem; width: 20vw;"><input type="search" class="form-control bg-light border-0 w-100" placeholder="Rechercher..."></div>
+                     <button type="button" class="btn btn-light d-none">button</button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
@@ -64,9 +65,9 @@
             </nav>
         
             <div class="mouve ms-5 mx-auto">
-            <div id="home" class="page active">
+            <div id="home" class="page active mt-5">
                 <h1>Bienvenue sur Student-Forum</h1>
-                <div class="card bg-dark" style="width:90%;height:30rem;">
+                <div class="card bg-dark" style="width:90% ;height:30rem;">
                     <div class="card-title">voiture</div>
                     <div class="card-body"></div>
                 </div>
