--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
 
         <div class="content w-100">
             <nav class="navbar navbar-expand-lg bg-white">
-                <div class="container">
+                <div class="container-fluid">
                     <a class="navbar-brand fs-2 ms-3 text-dark" href="#" style="font-family: 'Asap';">student-forum</a>
-                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <button class="btn btn-light btn-circle mx-auto none">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" fill="none">
+                        <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg></button>
+                    <div class="input position-relative" style="left:5rem;"><input type="search" style="width: 20vw;" class="form-control bg-light border-0" placeholder="Rechercher..." aria-label="Rechercher"></div>
+                    <button class="navbar-toggler ms-auto "  type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="input position-relative" style="left:10rem; width: 20vw;"><input type="search" class="form-control bg-light border-0 w-100" placeholder="Rechercher..."></div>
-                     <button type="button" class="btn btn-light d-lg-none d-md-block circle mx-auto">button</button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
@@ -63,11 +66,10 @@
                     </div>
                 </div>
             </nav>
-        
-            <div class="mouve ms-3 mx-auto">
             <div id="home" class="page active mt-5">
+                <div class="container-fluid">
                 <div class="container">
-                    <div class="presentation bg-dark position-relative bg-light rounded-5" style="height:10rem;top: -2.3rem;"><img src="ciel etoile.jpg" class="img-fluid rounded-3" alt=""></div>
+                    <div class="presentation bg-dark position-relative bg-light rounded-5 sticky-top " style="height:10rem;top: -2.3rem;"><img src="ciel etoile.jpg" class="img-fluid rounded-3" alt=""></div>
                 </div>
                 <div class="container">
                     <div class="row mx-auto">
