--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
             <a class="navbar-brand fs-5 mt-4" href="#" style="transform: translate(-10px);">
             <input type="text" class="form-control" placeholder="Rechercher...">
             </a>
-             <ul class="nav">
-                
-             </ul>
             <ul class="nav flex-column justify-content-center mt-5">
                 <li class="nav-item">
                     <a class="nav-link d-flex align-items-center bg-white text-dark" href="#" data-page="home">
@@ -68,12 +65,9 @@
             </nav>
             <div id="home" class="page active mt-5">
                 <div class="container-fluid">
-                <div class="container">
                     <div class="presentation bg-dark position-relative bg-light rounded-5 sticky-top " style="height:10rem;top: -2.3rem;"><img src="ciel etoile.jpg" class="img-fluid rounded-3" alt=""></div>
-                </div>
-                <div class="container">
                     <div class="row mx-auto">
-                        <div class="col-8 bg-danger text-center">
+                        <div class="col-8  col-lg-8 col-md-6 col-sm-3 bg-danger text-center">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos excepturi asperiores quia suscipit laborum unde voluptatum corrupti neque deserunt consequatur perferendis repellendus, molestiae officia esse voluptates totam cumque deleniti numquam.
                             Officiis temporibus cumque quidem iure minus! Odit eligendi mollitia incidunt totam, ipsa ab magnam voluptatibus at a, cupiditate ea tempora illo et culpa dignissimos assumenda maiores unde quae ipsum repellat!
                             Ipsum necessitatibus quae, similique eligendi qui suscipit veniam vero, eos facilis minima dignissimos non in expedita, illum harum mollitia atque! Reiciendis, facere. Saepe sequi cum deserunt doloremque minima, ducimus aliquid.
