--- a/authentification.html
+++ b/authentification.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="Assets/2i.png" alt="Logo LearnConnect" class="logo"> 
+            <img src="Assets/logo.png" alt="Logo LearnConnect" class="logo"> 
             <p>Votre hub académique pour la connexion et la collaboration</p>
         </div>
         <div class="content">
-            <h1>Bienvenue sur <span style="color: royalblue;">Forum-Student</span></h1>
+            <h1>Bienvenue sur <span style="color: #9370DB;">Forum-Student</span></h1>
             <p>Connectez-vous à votre compte ou créez-en un nouveau</p>
             <div class="tabs">
                 <button class="tab active" data-tab="login">Connexion</button>
