--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="d-flex">
-        <nav class="menu  sticky-top  vh-100 d-flex flex-column text-white px-5 py-3" id="menu-right" >
+        <nav class="menu  sticky-top  vh-100 d-flex flex-column text-white px-5 py-3 bg-white" id="menu-right" >
             <a class="navbar-brand fs-5 mt-4" href="#" style="transform: translate(-10px);">
             </a>
             <ul class="nav flex-column justify-content-center mt-5 border-bottom">
@@ -176,36 +176,42 @@
                   </div>
 
                   <div class="row mt-5">
-                    <div class="col-8 bg-light">
+                    <div class="col-7 bg-light" style="border-radius: 5px 5px 0 0 ;">
                       <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand text-white bg-warning" href="">publication</a>
-                        <button type="bouton" class="ms-auto">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30px" height="30px" viewBox="-0.5 0 25 25" fill="none">
-                            <path d="M19 3.32001H16C14.8954 3.32001 14 4.21544 14 5.32001V8.32001C14 9.42458 14.8954 10.32 16 10.32H19C20.1046 10.32 21 9.42458 21 8.32001V5.32001C21 4.21544 20.1046 3.32001 19 3.32001Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M8 3.32001H5C3.89543 3.32001 3 4.21544 3 5.32001V8.32001C3 9.42458 3.89543 10.32 5 10.32H8C9.10457 10.32 10 9.42458 10 8.32001V5.32001C10 4.21544 9.10457 3.32001 8 3.32001Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M19 14.32H16C14.8954 14.32 14 15.2154 14 16.32V19.32C14 20.4246 14.8954 21.32 16 21.32H19C20.1046 21.32 21 20.4246 21 19.32V16.32C21 15.2154 20.1046 14.32 19 14.32Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M8 14.32H5C3.89543 14.32 3 15.2154 3 16.32V19.32C3 20.4246 3.89543 21.32 5 21.32H8C9.10457 21.32 10 20.4246 10 19.32V16.32C10 15.2154 9.10457 14.32 8 14.32Z" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <button type="bouton" class="ms-auto border-0 bg-transparent">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" fill="none">
+                            <path d="M19 13C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11C18.4477 11 18 11.4477 18 12C18 12.5523 18.4477 13 19 13Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12 13C12.5523 13 13 12.5523 13 12C13 11.4477 12.5523 11 12 11C11.4477 11 11 11.4477 11 12C11 12.5523 11.4477 13 12 13Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M5 13C5.55228 13 6 12.5523 6 12C6 11.4477 5.55228 11 5 11C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg></button>
                       </nav>
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint temporibus ipsum dignissimos iure eveniet eum, ullam sunt odio minus, magni, quibusdam ex minima. Modi, possimus. Rem dolorem ea voluptates nemo?
-                       Quidem, aliquam. Repellat sequi tempore quos dolores, nisi, natus, aut quibusdam hic consectetur possimus suscipit cumque corrupti. Non sequi, accusantium blanditiis, omnis amet veniam fuga voluptatibus expedita quis a quisquam.
-                       Omnis cupiditate accusantium saepe quae aliquam magni minus asperiores consequuntur facere natus nulla iste explicabo provident ullam soluta incidunt odio atque porro optio, non ducimus dolorem sed in consectetur! Inventore?
-                       Libero rem voluptatem non reprehenderit sed, atque consequatur illum odio facere quos quisquam, maxime eius accusantium sint praesentium earum ipsa quaerat iure nisi porro? Soluta velit ad quidem cum architecto!
-                       Tempora accusantium atque similique laboriosam, minima maiores vero quo sequi laborum quam ex! Repudiandae sed exercitationem sint ad reprehenderit dolorum ea, numquam est sapiente dolore ipsam ab? Optio, assumenda ex.
-                       Dolores animi, asperiores officiis facere magni totam deleniti, ducimus commodi ea repellendus libero neque laborum. Inventore fuga ea asperiores ab quia quisquam vero natus ipsum rem, laboriosam fugit non fugiat?
-                       Cupiditate commodi quisquam esse natus doloremque aliquid vel omnis nihil. Consectetur incidunt saepe quae minus expedita culpa repellat corrupti. Tempora error dolorem, ipsum suscipit dicta cum repellat enim adipisci nesciunt?
-                       Blanditiis sapiente minus, quasi commodi ducimus quae pariatur dolorum rem nihil ad ipsa tempore voluptas numquam expedita vel sequi qui voluptate magni nostrum molestiae voluptatem recusandae obcaecati nam? Velit, fugit?
-                       Velit, voluptates? Ut saepe assumenda officia, dignissimos vel nam facilis repellat illo! Porro et non eius omnis quos voluptatem sit laudantium rem error. Sequi dolorem distinctio recusandae, rerum eaque voluptatem?
-                       Quas aliquid ipsa error alias dignissimos id nisi ipsam iusto quae esse dicta sint, eos cum blanditiis sapiente consequatur laboriosam? Aliquam saepe voluptates suscipit inventore, architecto nam nisi atque recusandae?
-                       Tempora harum nisi illum at illo quod sapiente fugiat minima accusamus reiciendis neque atque animi odit non perspiciatis aspernatur dolorum ratione recusandae quidem id, nulla beatae voluptatum dolore! Ea, minus.
-                       Explicabo, animi unde incidunt odio, enim consequatur adipisci minus distinctio accusamus voluptate nisi veritatis magnam quibusdam impedit commodi alias vitae pariatur quis facere quo sapiente ab. Est enim architecto necessitatibus?</p>
-                    </div>
-                    <div class="col-4 bg-light">
+                      <div class="d-flex flex-column">
+                        <div class="card bg-light border-0">
+                            <div class="card-body">
+                                <div class="card-title d-flex flex-column">
+                                    <div class="users-forum d-flex flex-row">
+                                        <img src="radu-marcusu-mbKApJz6RSU-unsplash.jpg" class="cirlce" width="50px" alt="">
+                                        <p>demo@200</p>
+                                        <button type="bouton" class="btn btn-primary ms-auto">rejoindre</button>
+                                    </div>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta, numquam! Dicta fuga et vel sit tenetur sequi recusandae ipsum debitis, autem nam a voluptatibus at totam ullam impedit molestias nihil?
+                                    Consequuntur numquam odit, aut hic tempora esse exercitationem atque nemo minima consectetur. Tenetur deleniti nobis accusantium tempore, dolorem sapiente quae repudiandae impedit error praesentium reiciendis illum illo fugit deserunt ab.</p>
+                                </div>
+                                <div class="card-footer border-0 bg-light"></div>
+                            </div>
+                        </div>
+                        <div class="card d-flex"></div>
+                        <div class="card d-flex"></div>
+                        <div class="card d-flex"></div>
+                        <div class="card d-flex"></div>
+                      </div>
+                      </div>
+                    <div class="col-5 bg-dark">
                         <p>meilleurs commentaires</p>
                     </div>
-                  </div>
                     </div>
-                    </div>
+                </div>
              </div>
             <div id="forums" class="page p-5" style="display: none;">
                 <h1>live</h1>
